--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -7,11 +7,11 @@ layout: page
 
     {% include index/description.html %}
     {% include index/carousel.html title="Sample Items" height="300" %}
-  
-  </div>
-  <div class="col-md-4">  
 
-    {% include index/time.html %}
+  </div>
+  <div class="col-md-4">
+
+    <!-- {% include index/time.html %} -->
 
     {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="info" %}
 
