--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -11,7 +11,7 @@ layout: page
   </div>
   <div class="col-md-4">
 
-    <!-- {% include index/time.html %} -->
+    {% include index/time.html %}
 
     {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="info" %}
 
